--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="./image/favicon_1.ico" type="image/x-icon">
   <title>|| 청우 QMS 로그인 ||</title>
 </head>
 
 <body>
   <div class="container">
     <ul class="panels">
-      <li><img class="main-bg" src="./image/main_bg1.png" alt=""></li>
-      <li><img class="main-bg" src="./image/main_bg2.png" alt=""></li>
+      <li><img class="main-bg" src="./image/main_bg1.jpg" alt=""></li>
+      <li><img class="main-bg" src="./image/main_bg2.jpg" alt=""></li>
+      <li><img class="main-bg" src="./image/main_bg12.jpg" alt=""></li>
     </ul>
     <div class="mobile-panel">
       <img src="./image/main_bg3.jpg" alt="">
@@ -22,7 +24,7 @@
     <h1 class="h1-kor">청우는 가치, 혁신, 신뢰를 추구합니다.</h1>
     <div class="login-section__container">
       <div class="login-section">
-        <p class="logo__container"><img src="image/only_logo_image.png" alt="logo"></p>
+        <p class="logo__container"><img src="image/logo.png" alt="logo"></p>
         <span class="sublogo">Quality Management System</span>
         <div class="login-input">
           <input type="text" placeholder="User ID">
@@ -42,8 +44,7 @@
         <div class="notice">
           <p class="notice__phrase">QMS 시스템의 정보는 당사 업무처리 이외의 사용 및 외부 유출을 절대 금하며 회사의 사전 승인없이 유출 시 형사처벌등의 법적 조치를 받을 수
             있습니다.</p>
-          <p class="notice__copyright">Copyright ⓒ 2024 <span><img class="copyright__logo"
-                src="./image/only_logo_font.png" alt=""></span> ALL RIGHTS RESERVED.</p>
+          <p class="notice__copyright">Copyright ⓒ 2024 CHUNGWOO Co., Ltd. ALL RIGHTS RESERVED.</p>
         </div>
       </div>
     </div>
