--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     </div>
     <div class="main-bg__filter"></div>
     <p class="h1-eng">YOUR BELOVED CHUNG WOO</p>
-    <h1 class="h1-kor">청우는 가치, 혁신, 신뢰를 추구합니다.</h1>
+    <!-- 애니메이션 넣기 -->
+    <h1 class="h1-kor">고객만족과 혁신으로 성장하는 청우</h1>
     <div class="login-section__container">
       <div class="login-section">
         <p class="logo__container"><img src="image/logo.png" alt="logo"></p>
