--- a/index.html
+++ b/index.html
@@ -16,56 +16,67 @@
       <li><img class="main-bg" src="./image/main_bg2.jpg" alt=""></li>
       <li><img class="main-bg" src="./image/main_bg12.jpg" alt=""></li>
     </ul>
-    <div class="mobile-panel">
-      <img src="./image/main_bg3.jpg" alt="">
-    </div>
+    <div class="mobile-panel"><img src="./image/main_bg3.jpg" alt=""></div>
     <div class="main-bg__filter"></div>
-    <p class="h1-eng">YOUR BELOVED CHUNG WOO</p>
-    <!-- 애니메이션 넣기 -->
-    <h1 class="h1-kor">고객만족과 혁신으로 성장하는 청우</h1>
+    <article class="on">
+      <h1 class="h1-eng"><span>We create the first-class quality</span></h1>
+      <p class="h1-kor">혁신으로 더 나은 세상을 만들어가는 청우</p>
+    </article>
     <div class="login-section__container">
       <div class="login-section">
-        <p class="logo__container"><img src="image/logo.png" alt="logo"></p>
-        <span class="sublogo">Quality Management System</span>
-        <div class="login-input">
-          <input type="text" placeholder="User ID">
-          <input type="password" placeholder="Password">
-          <a class="login-btn" href="#">LOGIN</a>
-        </div>
+        <p class="logo__container"><img src="image/logo.png" alt="logo"></p><span class="sublogo">Quality Management
+          System</span>
+        <div class="login-input"><input type="text" placeholder="User ID"><input type="password"
+            placeholder="Password"><a class="login-btn" href="#">LOGIN</a></div>
         <div class="login-more">
-          <div class="save-id">
-            <input type="checkbox">
-            <span>ID 저장</span>
-          </div>
-          <div class="sign-in">
-            <img class="icon" src="image/signin.png" alt="signin icon">
-            <a href="#"><span>사용자등록</span></a>
-          </div>
+          <div class="save-id"><input type="checkbox"><span>ID 저장</span></div>
+          <div class="sign-in"><img class="icon" src="image/signin.png" alt="signin icon"><a
+              href="#"><span>사용자등록</span></a></div>
         </div>
         <div class="notice">
           <p class="notice__phrase">QMS 시스템의 정보는 당사 업무처리 이외의 사용 및 외부 유출을 절대 금하며 회사의 사전 승인없이 유출 시 형사처벌등의 법적 조치를 받을 수
             있습니다.</p>
-          <p class="notice__copyright">Copyright ⓒ 2024 CHUNGWOO Co., Ltd. ALL RIGHTS RESERVED.</p>
+          <p class="notice__copyright">Copyright ⓒ 2024 CHUNGWOO Co.,
+            Ltd. ALL RIGHTS RESERVED.</p>
         </div>
       </div>
     </div>
   </div>
   </div>
-  <script>
-    const bgSection = document.querySelector('.bgSection');
+  <script>const bgSection = document.querySelector('.bgSection');
     const bgMobile = document.querySelector('.bgMobile');
     const panels = document.querySelectorAll('.panels li');
-
 
     const len = panels.length - 1;
     const interval = 4000;
     let vsNum = 0;
     let timer = null;
 
+    let h1 = document.querySelector('h1');
+    let txt = h1.innerText;
+    let h1Kor = document.querySelector('.h1-eng').innerHTML;
+    let tags = '';
+
+    for (const el of txt) tags += `<span>${el}</span>`;
+    h1.innerHTML = tags;
+
+    const span = h1.querySelectorAll('span');
+    console.log(span);
+    span.forEach((el, idx) => {
+      el.style.transitionDelay = 0.03 * idx + 's';
+    });
 
     window.onload = () => {
       startRolling();
+      setTimeout(textEffect, 0)
     };
+
+
+    //글자 애니메이션
+    function textEffect() {
+      span.forEach(span => span.style.transform = "translateY(0%)");
+    }
+
 
     //패널 활성화함수
     function activation(index) {
@@ -73,12 +84,13 @@
       panels[index].classList.add('on');
       vsNum = index;
     }
+
     //롤링함수
     function rolling() {
       vsNum < len ? vsNum++ : (vsNum = 0);
       activation(vsNum);
-      console.log(1);
     }
+
     //롤링 시작 함수
     function startRolling() {
       activation(vsNum);
@@ -87,7 +99,6 @@
 
 
   </script>
-
 </body>
 
 </html>
