--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </ul>
     <div class="mobile-panel"><img src="./image/main_bg3.jpg" alt=""></div>
     <div class="main-bg__filter"></div>
-    <article class="on">
+    <article>
       <h1 class="h1-eng"><span>We create the first-class quality</span></h1>
       <p class="h1-kor">혁신으로 더 나은 세상을 만들어가는 청우</p>
     </article>
