국문 슬로건 애니메이션 변경

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div class="mobile-panel"><img src="./image/main_bg4.jpg" alt=""></div>
     <div class="main-bg__filter"></div>
     <article>
-      <h1 class="h1-eng"><span>We create the first-class quality</span></h1>
-      <p class="h1-kor">혁신으로 더 나은 세상을 만들어가는 청우</p>
+      <h1 class="h1-eng">We create the first-class quality</h1>
+      <p class="h1-kor"><span>혁신으로 더 나은 세상을 만들어가는 청우</span></p>
     </article>
     <div class="login-section__container">
       <div class="login-section">
@@ -85,6 +85,7 @@
     function textEffect() {
       engSpan.forEach(span => span.style.transform = "translateY(0%)");
       korSpan.forEach(span => span.style.transform = "translateY(0%)");
+
     }
 
 
