js 주석 삭제, 정리

--- a/index.html
+++ b/index.html
@@ -43,12 +43,13 @@
     </div>
   </div>
   </div>
-  <script>const bgSection = document.querySelector('.bgSection');
+  <script>
+    //배경화면 롤링
+    const bgSection = document.querySelector('.bgSection');
     const bgMobile = document.querySelector('.bgMobile');
     const panels = document.querySelectorAll('.panels li');
 
-
-
+    //오른쪽 슬로건
     let h1 = document.querySelector('h1');
     let engTxt = h1.innerText;
     let engTags = '';
