--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
 <body>
   <div class="container">
     <ul class="panels">
-      <li><img class="main-bg" src="./image/main_bg1.jpg" alt=""></li>
-      <li><img class="main-bg" src="./image/main_bg2.jpg" alt=""></li>
+      <li><img class="main-bg" src="./image/main_bg1.png" alt=""></li>
+      <li><img class="main-bg" src="./image/main_bg2.png" alt=""></li>
       <li><img class="main-bg" src="./image/main_bg3.jpg" alt=""></li>
     </ul>
     <div class="mobile-panel"><img src="./image/main_bg4.jpg" alt=""></div>
     <div class="main-bg__filter"></div>
     <article>
-      <h1 class="h1-eng">We create the first-class quality</h1>
-      <p class="h1-kor"><span>혁신으로 더 나은 세상을 만들어가는 청우</span></p>
+      <h1 class="h1-eng">Preferred Fastening Solution partner Since 1991</h1>
     </article>
     <div class="login-section__container">
       <div class="login-section">
