--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </article>
     <div class="login-section__container">
       <div class="login-section">
-        <p class="logo__container"><img src="image/logo.png" alt="logo"></p><span class="sublogo">Quality Management
-          System</span>
+        <p class="logo__container"><img src="image/logo.png" alt="logo"></p><span class="sublogo"><img
+            src="./image/qms_text.png" alt=""></span>
         <div class="login-input"><input type="text" placeholder="User ID"><input type="password"
             placeholder="Password"><a class="login-btn" href="#">LOGIN</a></div>
         <div class="login-more">
