세번째 사진 변경

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <ul class="panels">
       <li><img class="main-bg" src="./image/main_bg1.png" alt=""></li>
       <li><img class="main-bg" src="./image/main_bg2.png" alt=""></li>
-      <li><img class="main-bg" src="./image/main_bg3.jpg" alt=""></li>
+      <li><img class="main-bg" src="./image/main_bg33.png" alt=""></li>
     </ul>
     <div class="mobile-panel"><img src="./image/main_bg4.jpg" alt=""></div>
     <div class="main-bg__filter"></div>
